[project]
name = "ai-chatbot-developer-for-call-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "openai>=1.77.0",
    "openai-agents>=0.0.14",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.0",
    "pyttsx3>=2.98",
    "speechrecognition>=3.14.2",
]

[project.scripts]
ai-chatbot-developer-for-call-support = "ai_chatbot_developer_for_call_support:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
